# fract-ol

./: CMakeLists.txt  Makefile  color.c  common_render.c  event_handler.c  fract_ol  fract_ol.h  fractals.c  input.c  main.c  nova_fractal.c  render.c  render_thread.c  utils.c
ft_printf/: Makefile
ft_printf/libft/: ft_tolower.c
libft/: ft_memcpy.c
